# SoniScope

./: .gitignore  Podfile  SoniScopeEmbedded
SoniScope/: AccessoryModel.swift  AccessorySessionManager.swift  ArchiveView.swift  AudioPreprocessor.swift  AudioSaverView.swift  AudioSaverViewController.swift  BleAudioSaving.swift  HomeView.swift  (+27 more)
SoniScope.xcodeproj/: project.pbxproj
SoniScope.xcworkspace/: contents.xcworkspacedata
SoniScopeEmbedded/LVGL_Arduino/: CMakeLists.txt  LVGL_Arduino.ino  LVGL_Driver.cpp  LVGL_Example.cpp  LVGL_Example.h  filelist.txt  ui.c  ui.h  ui_Connected.c  ui_Connected.h  ui_Open_Screen.c  ui_Open_Screen.h  ui_Recording.c  ui_Recording.h  ui_Recording_Complete.c  ui_Recording_Complete.h  ui_Recording_Incomplete.c  ui_Recording_Incomplete.h  ui_Sleep.c  ui_Sleep.h  ui_comp.c  ui_comp.h  ui_comp_batterygroup.c  ui_comp_batterygroup.h  ui_comp_buttondown.c  ui_comp_buttondown.h  ui_comp_buttonround.c  ui_comp_buttonround.h  ui_comp_buttontop.c  ui_comp_buttontop.h  ui_comp_dailymissiongroup.c  ui_comp_dailymissiongroup.h  ui_comp_dategroup.c  ui_comp_dategroup.h  ui_comp_forecastgroup.c  ui_comp_forecastgroup.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_pulsegroup.c  ui_comp_pulsegroup.h  (+24 more)
libraries/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Abnormal.c  ui_Abnormal.h  ui_Complete.c  ui_Complete.h  ui_Connected.c  ui_Connected.h  ui_Healthy.c  ui_Healthy.h  ui_Home.c  ui_Home.h  ui_Recording.c  ui_Recording.h  ui_font_SFpro.c  ui_img_2079530671.c  ui_img_623366413.c  ui_img_812009816.c  ui_img_checkmark_circle_png.c  ui_img_exclamationmark_circle_png.c  ui_img_image_png.c  ui_img_lungs_png.c  ui_img_r_png.c
(+96 files in other folders)
