SET(SOURCES ui_comp_batterygroup.c
    ui_comp_buttondown.c
    ui_comp_buttonround.c
    ui_comp_buttontop.c
    ui_comp_dailymissiongroup.c
    ui_comp_dategroup.c
    ui_comp_forecastgroup.c
    ui_comp_pulsegroup.c
    ui_comp_stepgroup.c
    ui_comp_titlegroup.c
    ui_comp_todayweathergroup.c
    ui_comp_weathergroup1.c
    ui_comp.c
    ui_Open_Screen.c
    ui_Recording_Complete.c
    ui_Recording.c
    ui_Sleep.c
    ui_Connected.c
    ui_Recording_Incomplete.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_977762417.c
    ui_img_1279885393.c
    ui_img_waveform_path_png.c
    ui_img_moon_zzz_png.c
    ui_img_ellipsis_png.c
    ui_img_iphone_gen3_png.c
    ui_img_stethoscope_circle_png.c
    ui_img_exclamationmark_triangle_png.c
    ui_img_btn_bg_1_png.c
    ui_img_btn_bg_3_png.c
    ui_img_call1_png.c
    fonts/ui_font_H1.c
    fonts/ui_font_Number_big.c
    fonts/ui_font_Number_extra.c
    fonts/ui_font_Subtitle.c
    fonts/ui_font_Title.c
    fonts/ui_font_SF_Compact.c
    fonts/ui_font_SF_Pro.c)

add_library(ui ${SOURCES})
